--- a/write.html
+++ b/write.html
@@ -4,44 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="write.css"> 
     <title>Write</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 300px"></textarea>
-            <label for="floatingTextarea2"><p class="opacity-25">Tell your story...</p></label>
-        </div>   
-
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-    <div class="carousel-indicators d-none">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-        <p class="text-center">To customize how your story is </br>distributed and presented to  readers, </br> more settings in the 3-dot menu.</p>
-      <div class="carousel-caption d-none d-md-block">
+    
+    
+    <div class="container-fluid mt-5 pt-5">
+        <div class="menu d-flex justify-content-between mt-2 pt-2">       
+            <div class="menuleft d-flex align-items-center ps-5">
+                <a href="./home.html"><img class="logomedium d-flex align-items-center" src="./img/write_icon.png" alt="logomedium"></a>
+                <p class="useraccnt">Draft in Martha Luna</p>
+            </div>
+            <div class="me-5">
+                <form class="menuright d-flex justify-content-center">
+                    <button type="button" class="btn btn-success rounded-pill me-5">Publish</button>
+                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-three-dots me-5" viewBox="0 0 16 16">
+                        <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
+                    </svg></a>
+                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-bell me-5" viewBox="0 0 16 16">
+                        <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
+                    </svg></a>
+                    <a href="#"><img class="avatar rounded-circle me-5" src="./img/avatar.png" alt="avatar"></a> 
+                </form>
+            </div>
         </div>
+        <h1 class="text-secondary mt-5 pt-5">Tiltle</h1>
+        <div class="form-floating ">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="width:100%; height: 500px"></textarea>
+            <label for="floatingTextarea2"><p class="opacity-25"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+              </svg>Tell your story...</p></label>
+        </div>  
+        <div class="mt-5 pt-5" height="1500px"></div>
+            <div id="carouselExampleDark" class="carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators d-none">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <p class="text-center fs-4">Select text to change formating, add headers, or create links</p>
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <p class="text-center fs-2">Writing on Medium</p>
+                    <div class="carousel-caption d-none d-md-block"></div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <p class="text-center fs-2">Writing on Medium</p>
+                    <div class="carousel-caption d-none d-md-block"></div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
     </div>
-    <div class="carousel-item" data-bs-interval="2000">
-        <p class="text-center">To customize how your story is </br>distributed and presented to  readers, </br> more settings in the 3-dot menu.</p>
-        <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <div height="1000px"></div>
 </body>
 </html>
