ajustes de reposividad y color

--- a/notiticaciones.html
+++ b/notiticaciones.html
@@ -73,7 +73,7 @@
 
             <div class="pb-4">
                 <a href="./profile.html" alt="profile"><img width="30px" height="30px" class=" rounded-circle"
-                    src="./img/avatar1.jfif"></img></a>
+                        src="./img/avatar1.jfif"></img></a>
             </div>
 
         </div>
@@ -97,24 +97,19 @@
 
             <!--INICIA CONTENEDOR DE PAGINA HOME-->
             <div class="mt-3  centro">
-
-               <!-- <div class="">
-                    <iframe src="notification.html"  width="100%" heigth="500px" name="cargador"></iframe>
-                </div>-->
-
                 <div class="mt-5"></div>
 
                 <h2>Notifications</h2>
-        <nav class="nav border-bottom border-1">
-            <p><a class="nav-link active" aria-current="page" href="#">All</a></p>
-            <p><a class="nav-link" href="#">Responses</a></p>
-        </nav>
-    
-        <div class="d-flex justify-content-between green">
-           <div class="notification_letter"><small>You're all caught up.</small></div>
-            <div><a class="nav-link $success notification_letter" href="#"><small>Your stats</small></a></div>
-        </div>
-       
+                <nav class="nav border-bottom border-1">
+                    <a class="nav-link active text-dark" aria-current="page" href="#">All</a>
+                    <a class="nav-link text-secondary" href="#"> Responses</a>
+                </nav>
+
+                <div class="d-flex justify-content-between green">
+                    <div class="notification_letter"><small>You're all caught up.</small></div>
+                    <div><a class="nav-link $success notification_letter text-success" href="#"><small>Your stats</small></a></div>
+                </div>
+
 
                 <!--TERMINA CONTENEDOR DE PAGINA HOME-->
 
