--- a/historias.html
+++ b/historias.html
@@ -11,73 +11,119 @@
     <link href="./proyect.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
     <title>Medium</title>
 </head>
 
 <body>
     <div class="container-fluid  h-auto d-inline-block d-flex justify-content-center">
 
-       <!--INICIA MENU DE LA IZQUIERDA-->
-       <div class="extremoIzq deskBar menu_left d-flex flex-column justify-content-between align-items-center">
-        <div>
-            <a href="./home.html"><img width="50px" class="pt-2" src="./img/medium_icon.fw.png"></img></a>
-        </div>
+        <!--INICIA MENU DE LA IZQUIERDA-->
+        <div class="extremoIzq deskBar menu_left d-flex flex-column justify-content-between align-items-center">
+            <div>
+                <a href="./home.html"><img width="50px" class="pt-2" src="./img/medium_icon.fw.png"></img></a>
+            </div>
 
-        <div class="d-flex flex-column flex-grow-1 justify-content-between pt-5 mt-5 pb-5 mb-5">
-            <a href="./home.html" alt="Home"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
-                    fill="black" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z" />
-                </svg>
-            </a>
-            <a href="./notiticaciones.html" alt="notify">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-bell"
+            <div class="d-flex flex-column flex-grow-1 justify-content-between pt-5 mt-5 pb-5 mb-5">
+                <a href="./home.html" alt="Home"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                        fill="black" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z" />
+                    </svg>
+                </a>
+                <a href="./notiticaciones.html" alt="notify">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-bell"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
+                    </svg>
+                </a>
+                <a href="./lists.html" alt="lists">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-bookmarks"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1H4z" />
+                        <path
+                            d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z" />
+                    </svg>
+                </a>
+                <a href="./historias.html" alt="stories">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-card-text"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
+                        <path
+                            d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
+                    </svg>
+                </a>
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-dash-lg"
                     viewBox="0 0 16 16">
-                    <path
-                        d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
                 </svg>
-            </a>
-            <a href="./lists.html" alt="lists">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-bookmarks"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1H4z" />
-                    <path
-                        d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z" />
-                </svg>
-            </a>
-            <a href="./historias.html" alt="stories">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-card-text"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
-                    <path
-                        d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
-                </svg>
-            </a>
+                <a href="./write.html" alt="stories">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray"
+                        class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path
+                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                        <path fill-rule="evenodd"
+                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                    </svg>
+                </a>
+            </div>
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray" class="bi bi-dash-lg"
-                viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
-            </svg>
-            <a href="./write.html" alt="stories">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray"
-                    class="bi bi-pencil-square" viewBox="0 0 16 16">
-                    <path
-                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                    <path fill-rule="evenodd"
-                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-                </svg>
-            </a>
+            <div class="pb-4">
+                <!--anañe Gaby-->
+                <ul class="nav flex-column bg-white">
+                    <li class="nav-item">
+                        <div class="btn-group dropup">
+                            <button type="img" class="img border-0 bg-white" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <img src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J" class="avatar" alt=""
+                                    width="32" height="32">
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Medium Partner Program</a></li>
+                                <li><a class="dropdown-item" href="#">Gift a Membership</a></li>
+                                <li><a class="dropdown-item" href="#">Become a Member</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="#">Refine Recommendations</a></li>
+                                <li><a class="dropdown-item" href="#">Manage Publications</a></li>
+                                <li><a class="dropdown-item" href="#">Stats</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <a class="dropdown-item" href="#"><img
+                                                src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J"
+                                                class="avatar" width="32" height="32"></a>
+                                    </div>
+                                    <div>
+                                        <span>gavema@mail.com</span>
+                                        <span>@gavema</span>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+
+                <!--termina Gaby-->
+            </div>
+
         </div>
-
-        <div class="pb-4">
-            <a href="./profile.html" alt="profile"><img width="30px" height="30px" class=" rounded-circle"
-                src="./img/avatar1.jfif"></img></a>
-        </div>
-
-    </div>
-    <!--TERMINA MENU DE LA IZQUIERDA-->
+        <!--TERMINA MENU DE LA IZQUIERDA-->
 
 
 
@@ -117,7 +163,7 @@
                 </div>
 
                 <div class="xbars d-flex justify-content-start">
-                    
+
                     <button type="button" class="stories_button_disaper btn btn-success rounded-pill">Write a
                         Story</button>
                     <button type="button" class="stories_button_disaper btn btn-light rounded-pill">Import a
@@ -166,7 +212,48 @@
                         <path
                             d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1v5.086z" />
                     </svg>
-                    <img width="30px" height="30px" class="rounded-circle" src="./img/avatar1.jfif"></img>
+                    <!--anañe Gaby-->
+                <ul class="nav flex-column bg-white">
+                    <li class="nav-item">
+                        <div class="btn-group dropup">
+                            <button type="img" class="img border-0 bg-white" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <img src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J" class="avatar" alt=""
+                                    width="32" height="32">
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Medium Partner Program</a></li>
+                                <li><a class="dropdown-item" href="#">Gift a Membership</a></li>
+                                <li><a class="dropdown-item" href="#">Become a Member</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="#">Refine Recommendations</a></li>
+                                <li><a class="dropdown-item" href="#">Manage Publications</a></li>
+                                <li><a class="dropdown-item" href="#">Stats</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <a class="dropdown-item" href="#"><img
+                                                src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J"
+                                                class="avatar" width="32" height="32"></a>
+                                    </div>
+                                    <div>
+                                        <span>gavema@mail.com</span>
+                                        <span>@gavema</span>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+
+                <!--termina Gaby-->
                 </div>
                 <!--TERMINA MENU MOBILE INFERIOR-->
             </div>
