--- a/lists.html
+++ b/lists.html
@@ -11,6 +11,12 @@
     <link href="./proyect.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
     <title>Medium</title>
 </head>
 
@@ -72,8 +78,48 @@
             </div>
 
             <div class="pb-4">
-                <a href="./profile.html" alt="profile"><img width="30px" height="30px" class=" rounded-circle"
-                    src="./img/avatar1.jfif"></img></a>
+                <!--anañe Gaby-->
+                <ul class="nav flex-column bg-white">
+                    <li class="nav-item">
+                        <div class="btn-group dropup">
+                            <button type="img" class="img border-0 bg-white" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <img src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J" class="avatar" alt=""
+                                    width="32" height="32">
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Medium Partner Program</a></li>
+                                <li><a class="dropdown-item" href="#">Gift a Membership</a></li>
+                                <li><a class="dropdown-item" href="#">Become a Member</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="#">Refine Recommendations</a></li>
+                                <li><a class="dropdown-item" href="#">Manage Publications</a></li>
+                                <li><a class="dropdown-item" href="#">Stats</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <a class="dropdown-item" href="#"><img
+                                                src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J"
+                                                class="avatar" width="32" height="32"></a>
+                                    </div>
+                                    <div>
+                                        <span>gavema@mail.com</span>
+                                        <span>@gavema</span>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+
+                <!--termina Gaby-->
             </div>
 
         </div>
@@ -98,24 +144,24 @@
             <!--INICIA CONTENEDOR DE PAGINA HOME-->
             <div class="mt-3  centro">
 
-               <!-- <div class="">
+                <!-- <div class="">
                     <iframe src="notification.html"  width="100%" heigth="500px" name="cargador"></iframe>
                 </div>-->
 
                 <div class="mt-5"></div>
 
                 <h2>Your Lists</h2>
-        <nav class="nav border-bottom border-1">
-            <p><a class="nav-link active" aria-current="page" href="#">All</a></p>
-            <p><a class="nav-link" href="#">Responses</a></p>
-            <p><a class="nav-link" href="#">Responses</a></p>
-        </nav>
-    
-        <div class="d-flex justify-content-between green">
-           <div class="notification_letter"><small>You're all caught up.</small></div>
-            <div><a class="nav-link $success notification_letter" href="#"><small>Your stats</small></a></div>
-        </div>
-       
+                <nav class="nav border-bottom border-1">
+                    <p><a class="nav-link active" aria-current="page" href="#">All</a></p>
+                    <p><a class="nav-link" href="#">Responses</a></p>
+                    <p><a class="nav-link" href="#">Responses</a></p>
+                </nav>
+
+                <div class="d-flex justify-content-between green">
+                    <div class="notification_letter"><small>You're all caught up.</small></div>
+                    <div><a class="nav-link $success notification_letter" href="#"><small>Your stats</small></a></div>
+                </div>
+
 
                 <!--TERMINA CONTENEDOR DE PAGINA HOME-->
 
@@ -140,7 +186,48 @@
                         <path
                             d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1v5.086z" />
                     </svg>
-                    <img width="30px" height="30px" class="rounded-circle" src="./img/avatar1.jfif"></img>
+                    <!--anañe Gaby-->
+                <ul class="nav flex-column bg-white">
+                    <li class="nav-item">
+                        <div class="btn-group dropup">
+                            <button type="img" class="img border-0 bg-white" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <img src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J" class="avatar" alt=""
+                                    width="32" height="32">
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Medium Partner Program</a></li>
+                                <li><a class="dropdown-item" href="#">Gift a Membership</a></li>
+                                <li><a class="dropdown-item" href="#">Become a Member</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="#">Refine Recommendations</a></li>
+                                <li><a class="dropdown-item" href="#">Manage Publications</a></li>
+                                <li><a class="dropdown-item" href="#">Stats</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <a class="dropdown-item" href="#"><img
+                                                src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J"
+                                                class="avatar" width="32" height="32"></a>
+                                    </div>
+                                    <div>
+                                        <span>gavema@mail.com</span>
+                                        <span>@gavema</span>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+
+                <!--termina Gaby-->
                 </div>
                 <!--TERMINA MENU MOBILE INFERIOR-->
             </div>
