--- a/home.html
+++ b/home.html
@@ -615,8 +615,7 @@
                         <div class="btn-group dropup">
                             <button type="img" class="img border-0 bg-white" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J" class="avatar" alt=""
-                                    width="32" height="32">
+                                <img src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J" class="avatar" alt="" width="32" height="32">
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Medium Partner Program</a></li>
